--- a/package.json
+++ b/package.json
@@ -19,13 +19,22 @@
     "redux": "^4.0.5",
     "react-redux": "^7.2.0",
     "redux-thunk": "^2.3.0",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "webpack-dev-server": "^3.11.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.1.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "webpack": "^2.6.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node food-server.js",
+    "build": "webpack",
+    "watch": "webpack -w"
   },
   "eslintConfig": {
     "extends": "react-app"
