--- a/package.json
+++ b/package.json
@@ -23,18 +23,18 @@
     "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.1.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "webpack": "^2.6.1"
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.4",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.9"
   },
   "scripts": {
     "start": "node food-server.js",
-    "build": "webpack",
-    "watch": "webpack -w"
+    "build": "webpack --mode development",
+    "watch": "webpack --mode production"
   },
   "eslintConfig": {
     "extends": "react-app"
